[gd_scene load_steps=31 format=2]

[ext_resource path="res://ParallaxBackgroundScrolling.gd" type="Script" id=1]
[ext_resource path="res://MenuTransition.gd" type="Script" id=2]
[ext_resource path="res://StartMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/TheJewishBitmap/TheJewishBitmap.otf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/images/ui/menu/tutorial_button_highlight.png" type="Texture" id=5]
[ext_resource path="res://assets/images/ui/menu/settings_button.png" type="Texture" id=6]
[ext_resource path="res://assets/images/ui/menu/settings_button_highlight.png" type="Texture" id=7]
[ext_resource path="res://assets/images/ui/menu/exit_button_highlight.png" type="Texture" id=8]
[ext_resource path="res://assets/images/ui/menu/settings_button_pressed.png" type="Texture" id=9]
[ext_resource path="res://assets/images/ui/menu/play_button.png" type="Texture" id=10]
[ext_resource path="res://assets/images/ui/menu/play_button_pressed.png" type="Texture" id=11]
[ext_resource path="res://assets/images/ui/menu/exit_button_pressed.png" type="Texture" id=12]
[ext_resource path="res://assets/images/ui/menu/tutorial_button_pressed.png" type="Texture" id=13]
[ext_resource path="res://assets/images/ui/menu/tutorial_button.png" type="Texture" id=14]
[ext_resource path="res://assets/images/ui/menu/exit_button.png" type="Texture" id=15]
[ext_resource path="res://assets/images/ui/menu/grid.png" type="Texture" id=16]
[ext_resource path="res://assets/images/ui/menu/play_button_highlight.png" type="Texture" id=17]
[ext_resource path="res://game/ui/UI_smalltextfont.tres" type="DynamicFont" id=18]

[sub_resource type="DynamicFont" id=16]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=17]
size = 80
outline_size = 2
extra_spacing_char = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://assets/fonts/TheJewishBitmap/TheJewishBitmap.otf"

[sub_resource type="DynamicFont" id=7]
size = 24
outline_size = 1
use_mipmaps = true
use_filter = true
extra_spacing_char = 1
font_data = SubResource( 9 )

[sub_resource type="DynamicFont" id=10]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=12]
size = 45
outline_size = 1
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=13]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=1]

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;

uniform float barRange : hint_range(0.0, 0.1) = 0.01;
uniform float barOffsetIntensity : hint_range(0.0, 0.01) = 0.000;
uniform float noiseQuality : hint_range(1.0, 5000) = 500;
uniform float noiseIntensity : hint_range(0.0, 0.03) = 0.000;
uniform float colorOffsetIntensity : hint_range(0.0, 2.0) = 0.175;
uniform float redMultiplier : hint_range(0.0, 0.01) = 0.006;
uniform float redIntensity : hint_range(0.0, 1.0) = 1.0;
uniform float greenMultiplier : hint_range(0.0, 0.01) = 0.0073;
uniform float greenIntensity : hint_range(0.0, 1.0) = 0.97;


float rand(vec2 co)
{
    return fract(sin(dot(co.xy ,vec2(12.9898,78.233))) * 43758.5453);
}

float verticalBar(float pos, float uvY, float offset)
{
    float edge0 = (pos - barRange);
    float edge1 = (pos + barRange);

    float x = smoothstep(edge0, pos, uvY) * offset;
    x -= smoothstep(pos, edge1, uvY) * offset;
    return x;
}

void fragment()
{
	float uvX, uvY;
	uvX = UV.x;
	uvY = UV.y;
    for (float i = 0.0; i < 0.71; i += 0.1313)
    {
        float d = mod(TIME * i, 1.7);
        float o = sin(1.0 - tan(TIME * 0.24 * i));
    	o *= barOffsetIntensity;
        uvX += verticalBar(d, uvY, o);
    }

    uvY *= noiseQuality;
    uvY = float(int(uvY)) * (1.0 / noiseQuality);
    float noise = rand(vec2(TIME * 0.00001, uvY));
	uvX += (noise * noiseIntensity)/15.0;

    vec2 offsetR = vec2(redMultiplier * sin(TIME * redIntensity), 0.0) * colorOffsetIntensity;
    vec2 offsetG = vec2(greenMultiplier * cos(TIME * greenIntensity), 0.0) * colorOffsetIntensity;

	vec2 uv = vec2(uvX, 1.0-uvY);
    float r = texture(SCREEN_TEXTURE, uv + offsetR).r;
    float g = texture(SCREEN_TEXTURE, uv + offsetG).g;
    float b = texture(SCREEN_TEXTURE, uv).b;

    COLOR = vec4(r, g, b, 1.0);
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 11 )
shader_param/barRange = 0.01
shader_param/barOffsetIntensity = 0.002
shader_param/noiseQuality = 5000.0
shader_param/noiseIntensity = 0.006
shader_param/colorOffsetIntensity = 0.373
shader_param/redMultiplier = 0.002
shader_param/redIntensity = 0.133
shader_param/greenMultiplier = 0.002
shader_param/greenIntensity = 0.13

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("UserGuide/Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UserGuide/Label2:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UserGuide/Label3:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UserGuide/Label4:percent_visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("UserGuide/Label6:percent_visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=15]
resource_name = "Typewrite"
length = 15.0
tracks/0/type = "value"
tracks/0/path = NodePath("UserGuide/Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UserGuide/Label2:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UserGuide/Label3:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4, 5.2, 5.5, 6.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.428571, 0.428571, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UserGuide/Label4:percent_visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 7.4, 8.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("UserGuide/Label6:percent_visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 9.1, 11.2, 11.5, 12.6, 12.9, 13.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.48, 0.48, 0.84, 0.84, 1.0 ]
}

[node name="Start Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Title" type="VBoxContainer" parent="."]
margin_left = 31.0
margin_top = 968.0
margin_right = 595.0
margin_bottom = 1083.0
alignment = 2

[node name="TeamVolk" type="Label" parent="Title"]
margin_right = 564.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 16 )
text = "Team Volk"

[node name="MainTitle" type="Label" parent="Title"]
margin_top = 35.0
margin_right = 564.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 17 )
text = "Souless Steel"

[node name="MainButtons" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 29.0187
margin_top = -128.979
margin_right = 779.019
margin_bottom = 518.021
rect_min_size = Vector2( 750, 0 )
rect_scale = Vector2( 0.36, 0.36 )
custom_constants/separation = 100

[node name="TutorialContainer" type="VBoxContainer" parent="MainButtons"]
margin_right = 750.0
margin_bottom = 152.0

[node name="Button" type="TextureButton" parent="MainButtons/TutorialContainer"]
margin_right = 750.0
margin_bottom = 105.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )

[node name="Descriptor" type="Label" parent="MainButtons/TutorialContainer"]
margin_top = 109.0
margin_right = 750.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 18 )
text = "New user system simulation"

[node name="NewGameContainer" type="VBoxContainer" parent="MainButtons"]
margin_top = 252.0
margin_right = 750.0
margin_bottom = 404.0

[node name="Button" type="TextureButton" parent="MainButtons/NewGameContainer"]
margin_right = 750.0
margin_bottom = 105.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 17 )
texture_focused = ExtResource( 17 )

[node name="Descriptor" type="Label" parent="MainButtons/NewGameContainer"]
margin_top = 109.0
margin_right = 750.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 18 )
text = "SAV BOOT SEQUENCE"

[node name="SettingsContainer" type="VBoxContainer" parent="MainButtons"]
margin_top = 504.0
margin_right = 750.0
margin_bottom = 656.0

[node name="Button" type="TextureButton" parent="MainButtons/SettingsContainer"]
margin_right = 750.0
margin_bottom = 105.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 7 )
texture_focused = ExtResource( 7 )

[node name="Descriptor" type="Label" parent="MainButtons/SettingsContainer"]
margin_top = 109.0
margin_right = 750.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 18 )
text = "system runtime parameters"

[node name="ExitContainer" type="VBoxContainer" parent="MainButtons"]
margin_top = 756.0
margin_right = 750.0
margin_bottom = 908.0

[node name="Button" type="TextureButton" parent="MainButtons/ExitContainer"]
margin_right = 750.0
margin_bottom = 105.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 8 )
texture_focused = ExtResource( 8 )

[node name="Descriptor" type="Label" parent="MainButtons/ExitContainer"]
margin_top = 109.0
margin_right = 750.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 18 )
text = "terminate program runtime"

[node name="MainSystemContainer" type="VBoxContainer" parent="."]
margin_left = 32.56
margin_top = 47.28
margin_right = 459.56
margin_bottom = 152.28
custom_constants/separation = -3

[node name="Label" type="Label" parent="MainSystemContainer"]
margin_right = 427.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 7 )
text = "MAIN SYSTEM"

[node name="Label2" type="Label" parent="MainSystemContainer"]
margin_top = 21.0
margin_right = 427.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 10 )
text = "SAV_hUNTERos.EXE"

[node name="UserGuide" type="VBoxContainer" parent="."]
anchor_left = 0.975
anchor_top = 0.5
anchor_right = 0.988
anchor_bottom = 0.5
margin_left = -852.476
margin_top = -195.209
margin_right = -8.47571
margin_bottom = 108.791
custom_constants/separation = 25

[node name="Label5" type="Label" parent="UserGuide"]
margin_right = 868.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 12 )
text = "User guide"
align = 2

[node name="Label" type="Label" parent="UserGuide"]
margin_top = 71.0
margin_right = 868.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 13 )
text = "[w, a, s, d] - Control Surface Activity Vehicle Movement"
align = 2
percent_visible = 0.0

[node name="Label2" type="Label" parent="UserGuide"]
margin_top = 127.0
margin_right = 868.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 13 )
text = "[LeftMouse/RightMouse] - Fire Right and Left Weapons"
align = 2
percent_visible = 0.0

[node name="Label3" type="Label" parent="UserGuide"]
margin_top = 183.0
margin_right = 868.0
margin_bottom = 248.0
custom_fonts/font = SubResource( 13 )
text = "[Q. e] = Fire right and left shoulder weapons. 
Current loadout does not feature a left shoulder weapon."
align = 2
percent_visible = 0.0

[node name="Label4" type="Label" parent="UserGuide"]
margin_top = 273.0
margin_right = 868.0
margin_bottom = 304.0
custom_fonts/font = SubResource( 13 )
text = "[R] = Toggle Reload "
align = 2
percent_visible = 0.0

[node name="Label6" type="Label" parent="UserGuide"]
margin_top = 329.0
margin_right = 868.0
margin_bottom = 428.0
custom_fonts/font = SubResource( 13 )
text = "Hunt and destroy enemy Sav units.
Find extraction points.
Survive."
align = 2
percent_visible = 0.0

[node name="SideBar1" type="ColorRect" parent="."]
anchor_bottom = 1.0
margin_left = 12.0
margin_right = 14.0
rect_min_size = Vector2( 2, 0 )

[node name="SideBar2" type="ColorRect" parent="."]
anchor_bottom = 1.0
margin_left = 17.2305
margin_right = 24.2305
rect_min_size = Vector2( 7, 0 )

[node name="UpperBar" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
color = Color( 0, 0, 0, 1 )

[node name="LowerBar" type="ColorRect" parent="."]
anchor_top = 0.986111
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 15 )
rect_pivot_offset = Vector2( 0.0615444, 39.8171 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scale = Vector2( 0.75, 0.75 )
transform = Transform2D( 0.75, 0, 0, 0.75, 0, 0 )
scroll_base_scale = Vector2( 3, 1 )
script = ExtResource( 1 )

[node name="BackLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 4000, 4000 )

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/BackLayer"]
show_behind_parent = true
margin_left = -605.0
margin_top = -726.0
margin_right = 7395.0
margin_bottom = 7274.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )
color = Color( 0, 0, 0, 1 )

[node name="GridLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 4000, 4000 )

[node name="Grid" type="TextureRect" parent="ParallaxBackground/GridLayer"]
margin_left = -602.776
margin_top = -721.705
margin_right = 3397.22
margin_bottom = 3278.3
texture = ExtResource( 16 )

[node name="GridLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 1, 1, 1, 0.14902 )
motion_scale = Vector2( -0.5, 1 )
motion_mirroring = Vector2( 4000, 4000 )

[node name="Grid" type="TextureRect" parent="ParallaxBackground/GridLayer2"]
margin_left = -602.776
margin_top = -721.705
margin_right = 3397.22
margin_bottom = 3278.3
texture = ExtResource( 16 )

[node name="ShaderEffects" type="CanvasLayer" parent="."]
layer = 2

[node name="Tween" type="Tween" parent="ShaderEffects"]

[node name="VCREffect" type="ColorRect" parent="ShaderEffects"]
visible = false
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="ShaderEffects/VCREffect"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 14 )
anims/Typewrite = SubResource( 15 )

[connection signal="mouse_entered" from="MainButtons/TutorialContainer/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="MainButtons/TutorialContainer/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="MainButtons/TutorialContainer/Button" to="." method="_on_TutorialButton_pressed"]
[connection signal="mouse_entered" from="MainButtons/NewGameContainer/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="MainButtons/NewGameContainer/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="MainButtons/NewGameContainer/Button" to="." method="_on_LaunchSystemButton_pressed"]
[connection signal="mouse_entered" from="MainButtons/SettingsContainer/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="MainButtons/SettingsContainer/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="MainButtons/SettingsContainer/Button" to="." method="_on_SettingsButton_pressed"]
[connection signal="mouse_entered" from="MainButtons/ExitContainer/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="MainButtons/ExitContainer/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="MainButtons/ExitContainer/Button" to="." method="_on_ExitButton_pressed"]
